<?xml version="1.0"?>
<package format="3">
  <name>bcr_bot</name>
  <version>1.3.2</version>
  <description>Gazebo simulation package for the TurtleBot3 with LLM-based path planning integration</description>
  <license>Apache-2.0</license>
  <maintainer email="sanjanr@umich.edu">Sanjana Raghavan</maintainer>

  <url type="website">http://wiki.ros.org/turtlebot3_gazebo</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues</url>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Runtime + build dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <!-- Optional runtime dependencies -->
  <exec_depend>gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>matplotlib</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ament_python</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
